# debug

./: .gitignore  Cargo.toml  README.md
controller/: Cargo.toml
controller/src/: bootstrap.rs  connect.rs  lib.rs  local.rs  remote.rs
controller/src/remote/: install.rs  run.rs
controller/src/remote/install/: build.rs
mock_network/: Cargo.toml
mock_network/src/: authority.rs  generate_test_data.rs  gossip.rs  insert_data.rs  lib.rs  network.rs  setup.rs  types.rs
mock_network/src/generate_test_data/: agent_info.rs  generated.rs  hdk.rs
mock_network/src/generate_test_data/hdk/: arbitrary_hdk.rs  counter_hdk.rs
mock_network/src/network/: quic.rs
mock_network/src/types/: builder.rs
sessions/: Cargo.toml
sessions/src/: build.rs  lib.rs  perf.rs  shared_types.rs
test_app/test_zome/: Cargo.toml
test_app/test_zome/src/: lib.rs
workdir/: dna.yaml
