[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssh = { version = "0.9.0-rc.3", default-features = false, features = [
    "native-mux",
] }
tokio = { version = "1.12", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.8", features = ["io-util"] }
futures = "0.3.21"
holochain_websocket = { path = "../../holochain/crates/holochain_websocket" }
holochain_serialized_bytes = "0.0.51"
url2 = "0.0"
reqwest = "0.11.7"
kitsune_p2p = { path = "../../holochain/crates/kitsune_p2p/kitsune_p2p" }
holochain_cli = { path = "../../holochain/crates/hc" }
local-ip-address = "0.4.4"
