[package]
name = "mock_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
holochain = { path = "../../holochain/crates/holochain", features = [
    "test_utils",
] }
kitsune_p2p = { path = "../../holochain/crates/kitsune_p2p/kitsune_p2p" }
kitsune_p2p_types = { path = "../../holochain/crates/kitsune_p2p/types" }
holochain_p2p = { path = "../../holochain/crates/holochain_p2p" }
holochain_types = { path = "../../holochain/crates/holochain_types" }
holochain_state = { path = "../../holochain/crates/holochain_state" }
holochain_keystore = { path = "../../holochain/crates/holochain_keystore" }
derive_builder = "0.10.2"
arbitrary = "1.0.3"
serde = { version = "1.0.123", features = ["derive"] }
fastrand = "1.7.0"
futures = "0.3.21"
rusqlite = "0.26.3"
