[package]
name = "sessions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sessions"
path = "src/lib.rs"

[dependencies]
arbitrary = "1.0.3"
mock_network = { path = "../mock_network" }
holochain = { path = "../../holochain/crates/holochain", features = [
    "test_utils",
] }
holochain_zome_types = { path = "../../holochain/crates/holochain_zome_types" }
holochain_types = { path = "../../holochain/crates/holochain_types" }
holochain_state = { path = "../../holochain/crates/holochain_state" }
holochain_cascade = { path = "../../holochain/crates/holochain_cascade" }
kitsune_p2p = { path = "../../holochain/crates/kitsune_p2p/kitsune_p2p" }
kitsune_p2p_types = { path = "../../holochain/crates/kitsune_p2p/types" }
holochain_keystore = { path = "../../holochain/crates/holochain_keystore" }
holo_hash = { path = "../../holochain/crates/holo_hash" }
holochain_cli = { path = "../../holochain/crates/hc" }
observability = { path = "../../observability" }
# tokio = { version = "1.16.1", features = ["full"] }
tokio = { version = "1.12", features = [ "full", "tracing"] }
rusqlite = "0.26.3"
serde = { version = "1.0.123", features = ["derive"] }
systemstat = "0.1.10"
